# newclass

./: .gitignore  Model.ipynb  docker-compose.yaml  pyproject.toml  requirements.txt  test_backend.py
.github/workflows/: python-package.yaml
backend/: Dockerfile  inference.py  model.py  requirements.txt  tokenizer.pickle
backend/saved_model/my_model/variables/: variables.index
deployment/: backend.yaml  frontend.yaml  ingress-controller.yaml  ingress.yaml
deployment/example/: values.yaml
deployment/ingress/: Chart.yaml
deployment/ingress/templates/: ingress.yaml
deployment/tutorial/: ingress.yaml
docker/: Dockerfile  requirements.txt
ec2/: Dockerfile  ilovejuice.pem  inference.py  requirements.txt
ec2/saved_model/my_model/: saved_model.pb
experimentation/: helper.py  model.py  tokenizer.pickle
frontend/: Dockerfile  frontend.py
lecture1/: Model.py  README.md  requirements-macos-arm64.txt
testing/: test_backend.py
