[tool.poetry]
name = "newclass"
version = "0.1.0"
description = ""
authors = ["Jerry Sun <sun.jerry.2000@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
keras = "2.0.7"
Keras-Applications = "1.0.8"
Keras-Preprocessing = "1.1.2"
numpy = "1.18.5"
pandas = "1.1.4"
scikit-learn = "0.23.2"
tensorflow = "2.3.1"
tokenizers = "0.10.3"
fastapi = "0.73.0"
uvicorn = "^0.19.0"
streamlit = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
